# csc

./: .gitignore  PRD.md  README.md  SDD.md  app.py  audio_engine.py  code_generator.py  database.py  dev_system.db  environment.yml  file_worker.py  llm_service.py  main.py  model_loader.py  pyproject.toml  requirements.txt
output_projects/New-Project/: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  docker-compose.yml  requirements.txt
output_projects/New-Project/backend/: main.py
output_projects/New-Project/docs/: API.md  DEPLOY.md
output_projects/New-Project/frontend/: next.config.js  package.json  tailwind.config.js
output_projects/New-Project/models/: user.py
output_projects/New-Project/whisper/: Dockerfile.whisper  app.py  requirements.txt
output_projects/New-Project_20260329_112055/: .env.example  Dockerfile  docker-compose.yml  main.py  requirements.txt
output_projects/New-Project_20260329_112055/app/: __init__.py  app.py  auth.py  config.py  db.py
output_projects/New-Project_20260329_112055/scripts/: init_db.py
output_projects/New-Project_20260329_112055/tests/: __init__.py  test_ai_service.py  test_email_parser.py  test_pdf_parser.py  test_validators.py
output_projects/New-Project_20260329_123155/: Dockerfile  app.py  deployment.yaml  main.py  requirements.txt
output_projects/New-Project_20260329_135151/: README.md  docker-compose.yml
output_projects/New-Project_20260329_150735/: main.py
output_projects/New-Project_20260329_152049/: .env.example  main.py  requirements.txt
(+182 files in other folders)
