[project]
name = "csc"
version = "0.1.0"
description = "AI Voice-Driven Development System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "google-genai>=1.68.0",
    "groq>=1.1.2",
    "huggingface-hub>=0.36.2",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "streamlit>=1.55.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.26.0",
    "transformers>=4.57.3",
    "sox>=1.5.0",
]
